Fixed CSS issue where the 'overflow-y' (scrollbars) where being displayed within a marker's info-window.

--- a/Our.Umbraco.GoogleMaps/Controls/GoogleMap.css
+++ b/Our.Umbraco.GoogleMaps/Controls/GoogleMap.css
@@ -1,5 +1,6 @@
 ﻿.gmapContainer
 {
+	line-height: normal;
 	width: 100%;
 }
 
